Fix nav contrast and print detail for xs screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -288,12 +288,13 @@ input[type=text] {
 }
 .form-check {
     display: inline-flex;
-    justify-content: center;
+    color: #f7f6f6;
 }
+
 /* Media Queries */
 
 /* Mobile and small screen devices up to 992px wide */
-@media screen and (min-width: 320px)  and (max-width: 993px) {
+@media screen and (max-width: 993px) {
     .hero-image{
         height: 30em;
     }
@@ -340,6 +341,11 @@ input[type=text] {
     .page-title {
         font-size: 2rem;
     }
+    
+    .print-image {
+        width: 100vw;
+        height: auto;
+    } 
 
     .print-title {
         padding: 10px;
@@ -365,6 +371,9 @@ input[type=text] {
         color: white;
     }
 
+    .nav-dark-color {
+        color: rgb(121, 119, 119)!important;
+    }
     .navbar-collapse {
         top: 3rem;
         position: absolute;
@@ -380,27 +389,8 @@ input[type=text] {
     }
 }
 
-/* @media screen and (min-width: 993px) {
-    .mobile-nav {
-        visibility: hidden;
-    }
- } */
-
-
-/* Ipads, tablets up to 768px wide */
-/* @media screen and (min-width: 481px)  and (max-width: 768px){
-    .hero-image{
-        height: 30em;
-    }
-} */
-
-/* Small screens, laptops up to 1024px */
-/* @media screen and (min-width: 769px)  and (max-width: 1024px){
-    .hero-image {
-        height: 30em;
-    }
-
-    .hero-text {
-        margin-top: 12em;
-    }
-} */
+@media screen and (max-width: 560px) {
+.nav-dark-color {
+    color: rgb(196, 193, 193)!important;
+}
+}
